--- a/src/components/burger-constructor/burger-constructor.module.scss
+++ b/src/components/burger-constructor/burger-constructor.module.scss
@@ -2,6 +2,8 @@
 	max-width: 600px;
 
 	&__wrapper {
+		// min-height: 300px;
+		// border: 1px solid rebeccapurple;
 	}
 
 	&__list {
@@ -31,6 +33,18 @@
 			background-color: #8585ad;
 			border-radius: 20px;
 			border: 2px solid #8585ad;
+		}
+
+		li {
+			position: relative;
+			display: flex;
+			flex-direction: row;
+			align-items: center;
+			gap: 8px;
+
+			width: 100%;
+
+			list-style: none;
 		}
 	}
 
@@ -64,4 +78,48 @@
 		text-align: center;
 		color: #f2f2f3;
 	}
+
+	&__bun {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		width: 100%;
+		padding: 16px 32px 16px 24px;
+		background: #1c1c21;
+		text-align: center;
+		width: 536px;
+		height: 80px;
+		box-sizing: border-box;
+
+		&_top {
+			border-radius: 88px 88px 40px 40px;
+		}
+
+		&_bottom {
+			border-radius: 40px 40px 88px 88px;
+		}
+	}
+
+	&__ingredient {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		width: 100%;
+		padding: 16px 32px 16px 24px;
+		border-radius: 40px;
+		background: #1c1c21;
+		text-align: center;
+		width: 536px;
+		height: 80px;
+		box-sizing: border-box;
+
+		margin: 16px 0 16px 32px;
+	}
 }
+
+// .drop {
+// 	padding: 40px;
+// 	border: 1px solid red;
+// 	width: 300px;
+// 	height: 300px;
+// }
