--- a/src/pages/registration/reset-password/reset-password.module.scss
+++ b/src/pages/registration/reset-password/reset-password.module.scss
@@ -16,5 +16,12 @@
 
         width: 480px;
         margin: auto;
+
+        form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
     }
 }
