--- a/src/pages/registration/sign-in/sign-in.module.scss
+++ b/src/pages/registration/sign-in/sign-in.module.scss
@@ -16,5 +16,11 @@
 
         width: 480px;
         margin: auto;
+
+        form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
     }
 }
