--- a/src/components/app-header/app-header.module.scss
+++ b/src/components/app-header/app-header.module.scss
@@ -4,10 +4,13 @@
 	margin: 0 auto;
 }
 .header {
-	font-family: 'JetBrains Mono', sans-serif;
+	font-family: "JetBrains Mono", sans-serif;
 	padding: 16px 0;
-	box-shadow: 0 0 1px 0 rgba(0, 0, 0, 0.04), 0 4px 8px 0 rgba(0, 0, 0, 0.04),
-		0 16px 24px 0 rgba(0, 0, 0, 0.04), 0 24px 32px 0 rgba(0, 0, 0, 0.04);
+	box-shadow:
+		0 0 1px 0 rgba(0, 0, 0, 0.04),
+		0 4px 8px 0 rgba(0, 0, 0, 0.04),
+		0 16px 24px 0 rgba(0, 0, 0, 0.04),
+		0 24px 32px 0 rgba(0, 0, 0, 0.04);
 	background: #1c1c21;
 
 	&__wrapper {
@@ -23,6 +26,13 @@
 		display: flex;
 		align-items: center;
 		gap: 8px;
+	}
+	.active {
+		color: #f2f2f3;
+		
+		button {
+			color: #f2f2f3;
+		}
 	}
 }
 
@@ -40,7 +50,7 @@
 		font-weight: 400;
 		font-size: 16px;
 		line-height: 1.5;
-		color: #f2f2f3;
+		color: #8585ad;
 		background: #1c1c21;
 	}
 
