--- a/src/pages/registration/registration/registration.module.scss
+++ b/src/pages/registration/registration/registration.module.scss
@@ -16,5 +16,13 @@
 
         width: 480px;
         margin: auto;
+
+        form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+    
+        }
     }
 }
