--- a/src/components/app-header/app-header.module.scss
+++ b/src/components/app-header/app-header.module.scss
@@ -29,7 +29,7 @@
 	}
 	.active {
 		color: #f2f2f3;
-		
+
 		button {
 			color: #f2f2f3;
 		}
@@ -38,6 +38,7 @@
 
 .logo {
 	position: absolute;
+	top: 20px;
 	left: 50%;
 	transform: translateX(-50%);
 }
