--- a/src/components/feed/feed-item/feed-item.module.scss
+++ b/src/components/feed/feed-item/feed-item.module.scss
@@ -41,6 +41,10 @@
     position: relative;
     margin-left: -16px;
 
+    &:first-child {
+        margin-left: 0;
+    }
+
     img {
         width: 100%;
         height: 100%;
