--- a/src/components/preloader/preloader.module.scss
+++ b/src/components/preloader/preloader.module.scss
@@ -4,7 +4,8 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-color: #1c1c21;
+    min-width: 580px;
+    // background-color: #1c1c21;
 }
 
 .spinner {
