--- a/src/pages/account/profile/profile.module.scss
+++ b/src/pages/account/profile/profile.module.scss
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    // justify-content: center;
     min-height: calc(100vh - 88px);
 
     .container {
@@ -20,4 +20,6 @@
         display: flex;
         gap: 60px;
     }
+
+
 }
