--- a/src/components/feed/feed-details/feed-details.module.scss
+++ b/src/components/feed/feed-details/feed-details.module.scss
@@ -1,9 +1,11 @@
 .order_details {
-	padding: 40px;
-	text-align: center;
+	max-width: 720px;
+	margin: 0 auto;
 
 	&__number {
-		text-align: center;
+		height: 64px;
+		display: flex;
+		align-items: center;
 	}
 
 	&__name {
@@ -26,7 +28,7 @@
 	&__list {
 		max-height: 312px;
 		overflow-y: auto;
-		padding-right: 24px;
+		padding: 0;
 		list-style: none;
 	}
 
