--- a/src/components/burger-ingredients/ingredient-details/ingredient-details.module.scss
+++ b/src/components/burger-ingredients/ingredient-details/ingredient-details.module.scss
@@ -3,9 +3,16 @@
 		text-align: center;
 	}
 	&__content {
+		position: relative;
+		z-index: 2;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
+
+		img {
+			position: relative;
+			z-index: 1;
+		}
 	}
 
 	&__structure {
