--- a/src/components/modal/modal.module.scss
+++ b/src/components/modal/modal.module.scss
@@ -11,11 +11,15 @@
 	border-radius: 40px;
 	padding: 40px;
 
-	box-shadow: 0 0 1px 0 rgba(0, 0, 0, 0.04), 0 4px 8px 0 rgba(0, 0, 0, 0.04),
-		0 16px 24px 0 rgba(0, 0, 0, 0.04), 0 24px 32px 0 rgba(0, 0, 0, 0.04);
+	box-shadow:
+		0 0 1px 0 rgba(0, 0, 0, 0.04),
+		0 4px 8px 0 rgba(0, 0, 0, 0.04),
+		0 16px 24px 0 rgba(0, 0, 0, 0.04),
+		0 24px 32px 0 rgba(0, 0, 0, 0.04);
 	background: #1c1c21;
 
 	&__wrapper {
+		z-index: 2;
 	}
 
 	&__header {
@@ -33,5 +37,12 @@
 		right: 40px;
 
 		cursor: pointer;
+		z-index: 3;
+
+		background-color: #1a1a1a;
+
+		&:hover {
+			border-color: #1a1a1a;
+		}
 	}
 }
